To fix button alignment issue

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
@@ -64,7 +64,8 @@ There will be several copies of the web resource visible in the debugger as "aru
             display: inline-block;
             cursor: pointer;
             text-align: center;
-            margin: 10px;
+            margin: 5px;
+            margin-bottom:10px;
             cursor: pointer;
         }
 
